--- a/Kertel/Base.lproj/Main.storyboard
+++ b/Kertel/Base.lproj/Main.storyboard
@@ -82,13 +82,11 @@
                         </prototypes>
                         <sections/>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Journal d'appels" id="82W-P4-w19">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="jIs-fU-T9l"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Journal d'appels" id="82W-P4-w19"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A6w-b5-J0M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-474" y="1261"/>
+            <point key="canvasLocation" x="-474" y="1280"/>
         </scene>
         <!--Info call-->
         <scene sceneID="Rg2-Tx-WZD">
@@ -171,7 +169,7 @@
         <!--main controller-->
         <scene sceneID="q2f-fA-eej">
             <objects>
-                <tabBarController title="main controller" modalTransitionStyle="flipHorizontal" id="bX7-0e-f0k" customClass="MainTabBarController" customModule="Kertel" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController title="main controller" modalTransitionStyle="flipHorizontal" id="bX7-0e-f0k" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="zPM-B2-3nw"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="dyp-V1-iOX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
@@ -326,13 +324,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="800"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Veuillez vous identifiez" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BgO-nX-045">
-                                                <rect key="frame" x="51" y="250" width="272" height="34"/>
+                                                <rect key="frame" x="51" y="250" width="272" height="33.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="GBU-FH-nLO">
-                                                <rect key="frame" x="20" y="338" width="334" height="180"/>
+                                                <rect key="frame" x="20" y="337.5" width="334" height="180"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Esn-06-5VR">
                                                         <rect key="frame" x="0.0" y="0.0" width="334" height="60"/>
@@ -426,23 +424,23 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enregistrer l'identifiant et la société" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eke-cN-HEM">
-                                                <rect key="frame" x="76" y="559" width="201" height="15"/>
+                                                <rect key="frame" x="76.5" y="559" width="200.5" height="14.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                 <color key="textColor" red="0.47058823529999999" green="0.74509803919999995" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gbc-Rh-8Yd" userLabel="Switch Username Company">
-                                                <rect key="frame" x="285" y="551" width="51" height="31"/>
+                                                <rect key="frame" x="285" y="550.5" width="51" height="31"/>
                                                 <color key="onTintColor" red="0.53567975759999997" green="0.77473640440000002" blue="0.16238942740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </switch>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enregistrer le mot de passe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wVo-Xf-nhW">
-                                                <rect key="frame" x="122" y="600" width="155" height="15"/>
+                                                <rect key="frame" x="122" y="600" width="155" height="14.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                 <color key="textColor" red="0.47058823529999999" green="0.74509803919999995" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JgY-pm-zoF">
-                                                <rect key="frame" x="285" y="592" width="51" height="31"/>
+                                                <rect key="frame" x="285" y="591.5" width="51" height="31"/>
                                                 <color key="onTintColor" red="0.53567975759506226" green="0.77473640441894531" blue="0.16238942742347717" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </switch>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="password" translatesAutoresizingMaskIntoConstraints="NO" id="B46-X7-IPJ">
@@ -513,10 +511,10 @@
             </objects>
             <point key="canvasLocation" x="1089" y="-1362"/>
         </scene>
-        <!--Login Navigation Controller-->
+        <!--Navigation Controller-->
         <scene sceneID="Sjy-Yn-COV">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UUQ-Mm-29E" customClass="LoginNavigationController" customModule="Kertel" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UUQ-Mm-29E" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2qj-DU-RQK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -539,7 +537,7 @@
         <!--Item-->
         <scene sceneID="NDg-JV-PLZ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Ay-5i-a4D" customClass="NavigationController" customModule="Kertel" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Ay-5i-a4D" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Xuh-4n-Pa2"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="8dW-Ea-fn1">
@@ -563,7 +561,7 @@
         <!--Item-->
         <scene sceneID="ntx-p9-oJT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yF9-ix-FC3" customClass="NavigationController" customModule="Kertel" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yF9-ix-FC3" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="dRB-62-cTE"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="n8f-6R-jkH">
